k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mongodb-service
  namespace: sachs
spec:
  ports:
    - port: 27017
  selector:
    app: mongodb
