k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noderest-service
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: noderest
