k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: noderest-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: "node-rest-tls"
      hosts:
        - "web2.api.demo.datexis.com"
  rules:
    - host: "web2.api.demo.datexis.com"
      http:
        paths:
          - path:
            backend:
              serviceName: noderest-service
              servicePort: 3000
